feat: add interview content

--- a/面试相关题目.md
+++ b/面试相关题目.md
@@ -3,9 +3,6 @@
 3. 未来的规划---- 英语
 
 
-
-
-
 技术： 
 去看下官网招聘要求
 原理很重要 promise ajax axios jsonp babel vue原理/react原理 bootstrap3/4，jquery  Jsp 原理
@@ -40,7 +37,7 @@ es6 7 ....
 9. var、let、const的区别
 10. 箭头函数和普通函数的区别
 11. Promise有哪些状态和方法
-12. 前端存储方案有哪些
+12. 前端存储方案有哪些 缓存
 13. Vue数据双向绑定到更新DOM整个流程(双向绑定->响应式->nextTick)
 
 性能优化、不同浏览器下的兼容问题；
@@ -49,7 +46,7 @@ es6 7 ....
 
 dom，事件，模块，正则
 
-布局模型，阿贾克斯，模板引擎，事件循环，面向对象，外埠派克，打包原理
+布局模型，ajax，模板引擎，事件循环，面向对象，webpack，打包原理
 
 网络，http，同源策略，nodejs，前端框架
 
@@ -59,6 +56,11 @@ dom，事件，模块，正则
 4：熟练掌握webpack 4.x，并有不使用脚手架构建项目的经验
 5：对OOP有一定的理解（用过设计模式加分，用过Node加分）
 6：具备良好的团队协作能力和沟通能力
+
+前端工程化 组件化 
+自动化部署
+单元测试 jest ,自动化测试
+
 
 
 掌握现有电商平台的业务和技术平台知识，并培养团队协作能力
