--- a/面试相关题目.md
+++ b/面试相关题目.md
@@ -5,7 +5,7 @@
 
 技术： 
 去看下官网招聘要求
-原理很重要 promise ajax axios jsonp babel vue原理/react原理 bootstrap3/4，jquery  Jsp 原理
+原理很重要 promise ajax axios jsonp babel vue原理/react原理 bootstrap3/4，jquery  Jsp 原理 CDN
 事件循环
 websocket
 Nodejs 常用
@@ -13,7 +13,7 @@ Nodejs 常用
 html标签 
 java/javascript的基本数据类型
 java/javascript的单例模式
-java/javascript的反射机制
+java/javascript的反射机制 程序在运行时能够获取自身的信息  继承
 代码能适应不同网页和版本，如何在不改变大框到情况下改变css形式
 浏览器运行原理
 前端性能优化
@@ -32,6 +32,13 @@ es6 7 ....
 4. 怎么阻止事件冒泡和浏览器默认行为
 5. 事件循环
 6. CSS画三角形，并解释原理(border)
+div {
+        width: 0;
+        height: 0;
+        border: 40px solid;
+        // 分别代表：上 左右 下
+        border-color: transparent transparent red;
+    }
 7. 怎么画0.5px的细线
 8. readonly和disabled的区别
 9. var、let、const的区别
@@ -39,7 +46,7 @@ es6 7 ....
 11. Promise有哪些状态和方法
 12. 前端存储方案有哪些 缓存
 13. Vue数据双向绑定到更新DOM整个流程(双向绑定->响应式->nextTick)
-
+---------------------
 性能优化、不同浏览器下的兼容问题；
 
 原型，闭包，高阶，异步
@@ -60,6 +67,12 @@ dom，事件，模块，正则
 前端工程化 组件化 
 自动化部署
 单元测试 jest ,自动化测试
+
+webpack 原理  打包原理 、 loader/ plugins
+vue 原理
+BFC
+SSR
+
 
 
 
