feat：add some questions

--- a/面试相关题目.md
+++ b/面试相关题目.md
@@ -2,6 +2,38 @@
 2. 经历 ---英语说工作背景、项目
 3. 未来的规划---- 英语
 
+前端开发工程师已投递
+上海研发 - 前端开发
+职位描述
+蔚来汽车整车应用软件中心数据算法组：负责蔚来汽车整车数据定义、分析、可视化与辅助决策
+1. 负责车联网大数据平台的前端开发
+2. 保证系统稳定性，保证高质量开发交付，及时排查线上故障
+3. 主要实现框架为Vue.js
+职位要求
+1. 本科及以上学历，计算机相关专业，2-3年及以上相关开发经验
+2. 精通HTML、CSS、JS，熟悉页面架构和布局，熟悉HTML5/CSS3等常用技术；
+3. 熟悉常用UI框架（如element/bootstrap/pure/kendo等);
+4. 精通JavaScript、AJAX、DOM、jQuery等技术；
+5. 熟练使用Grunt、Gulp、Webpack等构建工具；
+6. 具备MVVM框架开发经验，如React、VueJS、AngularJS等；
+7. 熟悉HTTP/HTTPS协议与Web浏览器基本特性
+8. 良好的沟通和团队协作能力、热爱技术、责任心强、能推动技术框架的落地使用，具备较强的trouble-shooting能力
+
+*******
+*******
+pure 轻量级css框架 https://purecss.io/
+
+pure bootstrap 原理
+
+echarts 车联网大数据平台
+
+*******
+*******
+
+蔚来前端：
+https://ac.nowcoder.com/discuss/681716?type=2
+
+代码调试  快捷键
 
 技术： 
 去看下官网招聘要求
@@ -66,12 +98,20 @@ dom，事件，模块，正则
 
 前端工程化 组件化 
 自动化部署
-单元测试 jest ,自动化测试
+单元测试 jest ,
+自动化测试
 
 webpack 原理  打包原理 、 loader/ plugins
 vue 原理
 BFC
 SSR
+nginx 反向代理
+
+响应式
+移动端适配
+
+
+
 
 
 
